--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.8.0+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_svg: ^2.0.17
   flutter_screenutil: ^5.9.3
   get: ^4.7.2
 
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
+    - assets/svgs/navbar/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
