--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.17
   flutter_screenutil: ^5.9.3
+  cached_network_image: ^3.4.1
+  pull_to_refresh_flutter3: ^2.0.2
   get: ^4.7.2
 
 dev_dependencies:
@@ -69,7 +71,12 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
-    - assets/svgs/navbar/
+    - assets/svgs/bottom_navbar/
+    - assets/svgs/checkout/
+    - assets/svgs/details/
+    - assets/svgs/localization/
+    - assets/svgs/order/
+    - assets/svgs/profile/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
