--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_flavor: ^3.1.1
   dio: ^5.8.0+1
   hive: ^2.2.3
+  intl: ^0.20.2
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.17
   flutter_screenutil: ^5.9.3
