--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   cached_network_image: ^3.4.1
   pull_to_refresh_flutter3: ^2.0.2
-  flutter_conditional: ^2.1.0+2
+  flutter_conditional_rendering: ^2.1.0
   get: ^4.7.2
 
 dev_dependencies:
